--- a/blogs/education.html
+++ b/blogs/education.html
@@ -40,9 +40,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-university"></i> Admission</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-users"></i> Counselling</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-globe"></i> Study Abroad</a>
@@ -84,7 +84,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/Bachelor-of-education-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/bachelor-of-education-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Education</label>
