--- a/blogs/engineering.html
+++ b/blogs/engineering.html
@@ -41,9 +41,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-university"></i> Admission</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-users"></i> Counselling</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-globe"></i> Study Abroad</a>
@@ -128,7 +128,7 @@
             <a href="https://eduprov.com/course/btech-in-aerospace.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
-                <label class="title fz-20">B. Tech Aerospace Engineering </label>
+                <label class="title fz-20">B.Tech Aerospace Engineering </label>
                 <div class="desc">
                   <p>
                     B.Tech Aerospace engineering deals with development designing of spacecraft, aircraft satellite.
@@ -144,7 +144,7 @@
             <a href="https://eduprov.com/course/btech-in-automobile.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
-                <label class="title fz-20">B. Tech Automobile Engineering</label>
+                <label class="title fz-20">B.Tech Automobile Engineering</label>
                 <div class="desc">
                   <p>
                     B.Tech Automobile Engineering deal with vehicles design, development, production, safety.
@@ -160,7 +160,7 @@
             <a href="https://eduprov.com/course/btech-in-construction.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
-                <label class="title fz-20">B. Tech Construction Engineering Management</label>
+                <label class="title fz-20">B.Tech Construction Engineering Management</label>
                 <div class="desc">
                   <p>
                     B.Tech Construction Engineering deals with designing, planning, construction management of infrastructures.
@@ -177,7 +177,7 @@
             <a href="https://eduprov.com/course/btech-in-dairy-technology.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
-                <label class="title fz-20">B. Tech Dairy Technology and Engineering</label>
+                <label class="title fz-20">B.Tech Dairy Technology and Engineering</label>
                 <div class="desc">
                   <p>
                     B.Tech Diary Technology deals with the technologized form of processing dairy.
@@ -193,7 +193,7 @@
             <a href="https://eduprov.com/course/btech-in-eee.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
-                <label class="title fz-20">B. Tech Electrical and Electronic Engineering</label>
+                <label class="title fz-20">B.Tech Electrical and Electronic Engineering</label>
                 <div class="desc">
                   <p>
                     B.Tech Electrical Electronics deals with study of electricity  electro magnetic application.
@@ -209,7 +209,7 @@
             <a href="https://eduprov.com/course/btech-in-ece.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
-                <label class="title fz-20">B. Tech Electronics and Communication Engineering (BE ECE)</label>
+                <label class="title fz-20">B.Tech Electronics and Communication Engineering (BE ECE)</label>
                 <div class="desc">
                   <p>
                     B.Tech ECE train on research, design, development, testing of electronic equipment used in communication.
@@ -225,7 +225,7 @@
             <a href="https://eduprov.com/course/btech-in-ete.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
-                <label class="title fz-20">B. Tech Electronics and Telecommunication Engineering (BE ETE)</label>
+                <label class="title fz-20">B.Tech Electronics and Telecommunication Engineering (BE ETE)</label>
                 <div class="desc">
                   <p>
                     BTech Electronics & Telecommunication deals with electronic circuits & data transfer over wired or wireless way.
