--- a/course/bsc-biotechnology-course.html
+++ b/course/bsc-biotechnology-course.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BSc Biotechnology Course, Admission, Colleges, Career | Eduprov</title>
+  <title>BSc Biotechnology Course Admission Eligibility Scope | Eduprov</title>
   <meta name="description" content="BSc Biotechnology course give detailed study about bio molecular & cellular activities. With EDUPROV know the top colleges, admission, syllabus, career & scope
     ">
   <meta name="keywords"
     content="">
   <meta name="author" content="Naveen">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
+  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="../dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="../faicon/css/all.css" />
   <link rel="stylesheet" href="../blog.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -21,7 +21,6 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 </head>
 
@@ -55,6 +54,7 @@
 
   <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
   height: 350px;
+  padding:50px;
   background-position: center center;
   background-size: cover;">
  
@@ -69,13 +69,11 @@
 
   <!--Course Start-->
   </div>
-  <div class="container">
+  <div class="container mt-2">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center" id="tag-font">
-          <button class="btn btn-large  btn-primary text-white" >
+        <h2 class="text-center text-primary" id="tag-font"> 
             Course Information
-          </button>
         </h2>
       </div>
     </div>
@@ -84,7 +82,7 @@
     <div class="row">
       <div class="col-md-12">
         <p class="text-justify" id="paragraph-font">
-            Biotechnology is the combination of two subjects- Biology and Technology. B.Sc. Biotechnology or Bachelor of Science in Biotechnology is a three-year degree program. This course has great scope as it is the course of the future. Biotechnology will continue to grow as the future of human life depends on it right from stem cell research to the discovery of new drugs.
+            <b>Biotechnology</b> is the combination of two subjects- Biology and Technology.<b>B.Sc Biotechnology</b> or Bachelor of Science in Biotechnology is a three-year degree program. This course has great scope as it is the course of the future. Biotechnology will continue to grow as the future of human life depends on it right from stem cell research to the discovery of new drugs.
         </p>
 
         <p class="text-justify" id="paragraph-font">
@@ -103,32 +101,28 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            ELIGIBILITY
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+            Eligibility
         </h2>
       </div>
 
-      <div class="col-md-12">
-        <label><b>After the completion of school education, the one who has an interest in pursuing a B. Sc degree are eligible for this course.</b></label>
+      <div class="col-md-12 mt-2">
+        <label>After the completion of school education, the one who has an interest in pursuing a B. Sc degree are eligible for this course.</label>
         <p class="text-justify" id="paragraph-font">
             In order to have a B. Sc degree in Biotechnology, the student should be qualified with 50% marks in 10+2 Science stream. Both PCM (Physics, Chemistry & Mathematics) as well as PCB (Physics, Chemistry & Biology) group students are eligible for this course.
         </p>
-        <label><b>Students can get admission in Government approved Institutes if they passed entrance tests.</b></label>
+        <label>Students can get admission in Government approved Institutes if they passed entrance tests.</label>
 
         <hr />
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            SCOPE
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+            Scope
         </h2>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 mt-2">
         <p class="text-justify" id="paragraph-font">
             After B.Sc. Technology, students can opt for the Master course as M.Sc. Biotechnology, which will take two years to complete. The scope of this course is high in various fields like Organ Transplantation, Rational Drug Design, Stem Cell techniques, Tissue Culture, Enzyme Engineering, etc.
         </p>
@@ -141,16 +135,8 @@
         
         <hr />
       </div>
-
-      <!--Table start-->
-
-      <!--Table End-->
     </div>
   </div>
-
-  <!--Course End-->
-
-  <!--Footer Start-->
 
   <div class="container-fluid justify-content-center px-0">
     <footer>
@@ -160,19 +146,22 @@
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
                 <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                   <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
                 <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
                 <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
+                <span>
+                  <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+               </span>
             </li>
         </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+               No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -250,22 +239,22 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
