--- a/course/bsc-chemistry-course.html
+++ b/course/bsc-chemistry-course.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B.Sc Chemistry Course, Admission, Colleges, Career | Eduprov</title>
+  <title>B.Sc Chemistry Admission Eligibility Scope | Eduprov</title>
   <meta name="description" content="BSc Chemistry deals with Study of molecules & how they interact. Get all updates on Admission, Top Colleges, Counseling, Entrance Exams & Scope with EDUPROV
     ">
   <meta name="keywords"
     content="">
-  <meta name="author" content="Naveen">
+  <meta name="author" content="thephotogenicbug">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
+  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="../dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="../faicon/css/all.css" />
   <link rel="stylesheet" href="../blog.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -21,8 +21,6 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
 </head>
 
 <body>
@@ -55,6 +53,7 @@
 
   <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
   height: 350px;
+  padding:50px;
   background-position: center center;
   background-size: cover;">
  
@@ -69,13 +68,11 @@
 
   <!--Course Start-->
   </div>
-  <div class="container">
+  <div class="container mt-2">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center" id="tag-font">
-          <button class="btn btn-large  btn-primary text-white" >
+        <h2 class="text-center text-primary" id="tag-font">
             Course Information
-          </button>
         </h2>
       </div>
     </div>
@@ -84,7 +81,7 @@
     <div class="row">
       <div class="col-md-12">
         <p class="text-justify" id="paragraph-font">
-            Chemistry is the study of properties and composition of matter and their interactions. B.Sc. Chemistry or Bachelor of Science in Chemistry is an undergraduate degree course and its duration is 3years. B.Sc. Chemistry deals with the process of separation, identification, and quantification of the chemical components as well as the changes during chemical reactions. Analytical methods of chemistry may require measuring physical quantities of the analytics such as light absorption, fluorescence or conductivity.
+            Chemistry is the study of properties and composition of matter and their interactions. B.Sc. Chemistry or <b>Bachelor of Science in Chemistry </b>is an undergraduate degree course and its duration is 3years. B.Sc. Chemistry deals with the process of separation, identification, and quantification of the chemical components as well as the changes during chemical reactions. Analytical methods of chemistry may require measuring physical quantities of the analytics such as light absorption, fluorescence or conductivity.
         </p>
 
         <p class="text-justify" id="paragraph-font">
@@ -98,14 +95,12 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            ELIGIBILITY
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+            Eligibility
         </h2>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 mt-2">
         <ul>
             <li>The Student should have a minimum qualification in 10+2 with science subjects including chemistry. </li>
             <li>Students must have passed 10+2 with at least 50% marks from a recognized board.</li>
@@ -120,16 +115,14 @@
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            SCOPE
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+            Scope
         </h2>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 mt-2">
         <p class="text-justify" id="paragraph-font">
-            After successful completion of B.Sc. Chemistry course, students can go for M.Sc. in Chemistry. Apart from M.Sc. The chemistry they also can opt for an MBA if they are interested in business. Graduates can get lots of jobs in this field like Analytical & Production Chemist, Biomedical Chemist, Chemical Engineering Associate, Industrial Research Scientist, Lab Chemist, Safety, Health & Environment Specialist etc. Some students can opt the teaching profession in this field. One can also become a Government/Private Teacher/Lecturer in Schools/College/University upon completing certain degrees for educating. Furthermore, information regarding the employment areas and the job types which are available in the nation and overseas can be obtained from us. At EDUPROV one can get the up to date information. And we will always try to resolve your queries and fulfill your dream to get into the course.
+            After successful completion of <b>B.Sc Chemistry</b> course, students can go for M.Sc. in Chemistry. Apart from M.Sc. The chemistry they also can opt for an MBA if they are interested in business. Graduates can get lots of jobs in this field like Analytical & Production Chemist, Biomedical Chemist, Chemical Engineering Associate, Industrial Research Scientist, Lab Chemist, Safety, Health & Environment Specialist etc. Some students can opt the teaching profession in this field. One can also become a Government/Private Teacher/Lecturer in Schools/College/University upon completing certain degrees for educating. Furthermore, information regarding the employment areas and the job types which are available in the nation and overseas can be obtained from us. At EDUPROV one can get the up to date information. And we will always try to resolve your queries and fulfill your dream to get into the course.
         </p>
         <p class="text-justify" id="paragraph-font">
             Candidates with an industrial experience of a minimum of 2 to 3 years are most wanted abroad and they can apply for jobs abroad and can get good explorer. Oil companies in gulf countries provide job opportunities for Chemistry candidates. An opportunity for higher education is also good in several countries overseas.
@@ -137,16 +130,8 @@
         
         <hr />
       </div>
-
-      <!--Table start-->
-
-      <!--Table End-->
     </div>
   </div>
-
-  <!--Course End-->
-
-  <!--Footer Start-->
 
   <div class="container-fluid justify-content-center px-0">
     <footer>
@@ -156,19 +141,22 @@
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
                 <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                   <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
                 <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
                 <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
+                <span>
+                  <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+               </span>
             </li>
         </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+               No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -246,22 +234,22 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
